# sudoku

./: CMakeLists.txt  Makefile  README.md  config.txt  generator.c  generator.h  main.c  solver.c  solver.h  solver.py  sudoku
src/: cell_functions.c  cell_functions.h  config.c  config.h  game.c  game.h  main.c  pos.h  structs.h  sudoku_functions.c  sudoku_functions.h  sudoku_scene.c  sudoku_scene.h  timer.c  timer.h
src/constraints/: constraints.c  constraints.h  hidden_single.c  naked_single.c  rule_constraints.c  unique_in_unit.c
src/sudoku_functions/: generating.c  solving.c  sudoku_functions.c  sudoku_functions.h
